[package]
name = "nathan_argon2"
version = "0.2.0"
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.98"
serde = { version = "1.0.126", default-features = false }
async-std = { version = "1.9.0", features = ["attributes"], default-features = false }
tide = { version = "0.16.0", features = ["h1-server"], default-features = false }

[build-dependencies]
cc = "1.0.69"

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
